First and final commit

--- a/projects/landing-page/css/styles.css
+++ b/projects/landing-page/css/styles.css
@@ -45,6 +45,7 @@ p {
     color: #eee;
 }
 
+
 /* ---- Layout Rules ---- */
 main {
     margin: 10vh 1em 10vh;
@@ -65,37 +66,39 @@ section {
 
 /* Navigation Styles*/
 .navbar__menu ul {
+    padding: 2%;
     padding-left: 0;
     margin: 0;
-    text-align: right;
+    text-align: center;
 }
 
 .navbar__menu li {
-    display: inline-block;
+    display: inline-flex;
+    padding-left: 2%;
 }
 
 .navbar__menu .menu__link {
-    display: block;
-    padding: 1em;
+    display: inline-block;
     font-weight: bold;
     text-decoration: none;
-    color: #000;
+    color: white;
 }
 
 .navbar__menu .menu__link:hover {
-    background: #333;
+    background: #df6e59;
     color: #fff;
     transition: ease 0.3s all;
 }
 
 /* Header Styles */
 .page__header {
-    background: #fff;
+    background: #000D3C;
     position: fixed;
     top: 0;
     width: 100%;
     z-index: 5;
 }
+
 
 /* Footer Styles */
 .page__footer {
@@ -194,8 +197,10 @@ section:nth-of-type(3n + 1) .landing__container::after {
 /* Section Active Styles */
 /* Note: your-active-class class is applied through javascript. You should update the class here and in the index.html to what you set in your javascript file.  */
 section.your-active-class {
-    background: rgb(0, 0, 0);
-    background: linear-gradient(0deg, rgba(0, 0, 0, 0.1) 0%, rgba(0, 0, 0, 0) 100%);
+    /*background: rgb(0, 0, 0);
+    background: linear-gradient(0deg, rgba(0, 0, 0, 0.1) 0%, rgba(0, 0, 0, 0) 100%);*/
+    background: #fcb055;
+
 }
 
 section.your-active-class .landing__container::before {
